# aurexir_back

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: c4a8f1d27b53_descuentos_newsletter.py  e7b2c9a41f08_tracking_y_locale_en_pedidos.py  ff2333de81c8_tablas_iniciales.py
app/: config.py  database.py  main.py  rate_limit.py  security.py  seed.py
app/data/: products_seed.json
app/models/: __init__.py  base.py  discount.py  newsletter.py  order.py  product.py  user.py
app/routers/: admin.py  auth.py  checkout.py  discounts.py  newsletter.py  orders.py  products.py  shipping.py  webhooks.py
app/schemas/: auth.py  cart.py  checkout.py  discount.py  newsletter.py  order.py  product.py  shipping.py
app/services/: cart.py  discounts.py  email.py  inventory.py  metrics.py  orders.py  shipping.py  stripe_service.py
tests/: conftest.py  stripe_utils.py  test_admin_products.py  test_auth.py  test_checkout.py  test_discounts.py  test_metrics.py  test_newsletter.py  test_order_emails.py  test_orders.py  test_products.py  test_security.py  test_shipping.py  test_webhook.py
